@@ -45,7 +45,7 @@ public final class LongEntry implements Entry {
    */
   @Override
   public void write(final OutputStream os) throws IOException {
-    DataOutputStream ds = new DataOutputStream(os);
+    final DataOutputStream ds = new DataOutputStream(os);
     ds.writeLong(fValue);
   }
   
@@ -60,9 +60,10 @@ public final class LongEntry implements Entry {
   /**
    * Equality test.
    * @param obj Object to be compared.
+   * @return true iff this equals obj.
    */
   @Override
-  public boolean equals(Object obj) {
+  public boolean equals(final Object obj) {
     if (obj == null) {
       return false;
     } else if (obj.getClass().equals(this.getClass())) {
@@ -78,6 +79,6 @@ public final class LongEntry implements Entry {
    */
   @Override
   public int hashCode() {
-    return new Long(fValue).hashCode();
+    return Long.valueOf(fValue).hashCode();
   }
 }
